--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <div id="ThePage" onclick="window.location='start.htm';">
+    <div id="ThePage" onclick="window.location='./start.htm';">
         <div>
             <div id="TheLogo"><img src="img/logo.png"/></div>
             <div id="TheTitle">INCENTIVE TREE</div>
