--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </script>
     <style type="text/css">
         html, body { min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; width: 100%; height: 100%; color: #666; }
-        body { background: url("/img/tree.png") bottom left no-repeat; }
-        div#ThePage { xposition: fixed!important; position: absolute; left: 0; top: 0; right: 0; bottom: 0; border: solid 1px green; }
+        body { background: url("img/tree.png") bottom left no-repeat; }
+        div#ThePage { position: absolute; left: 0; top: 0; right: 0; bottom: 0; border: solid 1px green; }
         div#ThePage div { text-align: center; }
         div#TheLogo img { height: 67%; }
         div#TheInstructions { position: absolute; width: 100%; bottom: 0.5em; }
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <div id="ThePage" onclick="window.location='./start.htm';">
+    <div id="ThePage" onclick="window.location='start.html';">
         <div>
             <div id="TheLogo"><img src="img/logo.png"/></div>
             <div id="TheTitle">INCENTIVE TREE</div>
