--- a/industry.html
+++ b/industry.html
@@ -21,7 +21,7 @@
 
         function NextPage() {
             treeData.Save();
-            window.location.href = "Jobs.htm";
+            window.location.href = "jobs.html";
         }
     </script>
     <link href="css/tree.css" rel="stylesheet" />
