--- a/start.html
+++ b/start.html
@@ -21,7 +21,7 @@
 
         function NextPage() {
             treeData.Save();
-            window.location.href = "Wages.htm";
+            window.location.href = "industry.html";
         }
     </script>
     <link href="css/tree.css" rel="stylesheet" />
@@ -34,16 +34,9 @@
 </head>
 <body>
     <div id="ThePage">
-        <h2 class="ui-bar ui-bar-a">Job Creation</h2>
+        <h2 class="ui-bar ui-bar-a">ACA Incentive Tree</h2>
         <div class="ui-body">
-            <p>Several programs have job creation requirements.  Select the number of new jobs expected to be created in the first 3 years:</p>
-            <fieldset data-role="controlgroup">
-                <legend></legend>
-                <input type="radio" name="industry" id="industry-a" value="Aerospace" /> <label for="industry-a">None</label>
-                <input type="radio" name="industry" id="industry-b" value="Aerospace" /> <label for="industry-b">Less than 5</label>
-                <input type="radio" name="industry" id="industry-c" value="Aerospace" /> <label for="industry-c">5 to 24</label>
-                <input type="radio" name="industry" id="industry-d" value="Aerospace" /> <label for="industry-d">25 or more</label>
-            </fieldset>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan blandit fermentum. Pellentesque cursus mauris purus, auctor commodo mi ullamcorper nec. Donec semper mattis eros, nec condimentum ante sollicitudin quis. Etiam orci sem, porttitor ut tellus nec, blandit posuere urna. Proin a arcu non lacus pretium faucibus. Aliquam sed est porttitor, ullamcorper urna nec, vehicula lorem. Cras porttitor est lorem, non venenatis diam convallis congue.</p>
         </div>
         <div id="TheFooter">
             <button onclick="NextPage();" class="ui-btn ui-icon-arrow-r ui-btn-icon-right">Next</button>
