--- a/wages.html
+++ b/wages.html
@@ -21,7 +21,7 @@
 
         function NextPage() {
             treeData.Save();
-            window.location.href = "Investment.htm";
+            window.location.href = "investment.html";
         }
     </script>
     <link href="css/tree.css" rel="stylesheet" />
