--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@
     <script src="jqm/jquery-1.10.2.min.js"></script>
     <script src="jqm/jquery.mobile-1.4.1.min.js"></script>
     <link href="css/tree.css" rel="stylesheet" />
-    <script type="text/javascript" src="index2.js"></script>
+    <script type="text/javascript" src="tree.js"></script>
     <style type="text/css">
         .collapsible-no-icon .ui-btn::after { x-display:none; }
         #results-controlgroup div { text-align: left; }
