--- a/tree.html
+++ b/tree.html
@@ -36,9 +36,10 @@
                 <input type="radio" name="industry" id="industry-f" value="Manufacturing" /> <label for="industry-f">Manufacturing</label>
                 <input type="radio" name="industry" id="industry-g" value="Company Headquarters" /> <label for="industry-g">Company Headquarters</label>
                 <input type="radio" name="industry" id="industry-h" value="Research & Development" /> <label for="industry-h">Research &amp; Development</label>
-                <input type="radio" name="industry" id="industry-i" value="Foresty (Harvesting, Processing or Transporting)" /> <label for="industry-i">Foresty (Harvesting, Processing or Transporting)</label>
-                <input type="radio" name="industry" id="industry-j" value="Government" /> <label for="industry-j">Government</label>
-                <input type="radio" name="industry" id="industry-k" value="Other" /> <label for="industry-k">Other</label>
+                <input type="radio" name="industry" id="industry-i" value="Computer Data Center" /> <label for="industry-i">Computer Data Center</label>
+                <input type="radio" name="industry" id="industry-j" value="Foresty (Harvesting, Processing or Transporting)" /> <label for="industry-j">Foresty (Harvesting, Processing or Transporting)</label>
+                <input type="radio" name="industry" id="industry-k" value="Government" /> <label for="industry-k">Government</label>
+                <input type="radio" name="industry" id="industry-l" value="Other" /> <label for="industry-l">Other</label>
             </fieldset>
         </div>
         <div data-role="collapsible" data-mini="true" data-iconpos="right" class="collapsible-no-icon">
@@ -122,8 +123,8 @@
                 <legend></legend>
                 <input type="radio" name="stage" id="stage-a" value="Concept only" /> <label for="stage-a">Concept only</label>
                 <input type="radio" name="stage" id="stage-b" value="Startup or small business in the innovation space" /> <label for="stage-b">Startup or small business in the innovation space</label>
-                <input type="radio" name="stage" id="stage-d" value="Other startup or small business" /> <label for="stage-c">Other startup or small business</label>
-                <input type="radio" name="stage" id="stage-c" value="Other" /> <label for="stage-d">Other</label>
+                <input type="radio" name="stage" id="stage-c" value="Other startup or small business" /> <label for="stage-c">Other startup or small business</label>
+                <input type="radio" name="stage" id="stage-d" value="Other" /> <label for="stage-d">Other</label>
             </fieldset>
         </div>
         <div data-role="collapsible" data-mini="true" data-iconpos="right" class="collapsible-no-icon">
@@ -152,7 +153,7 @@
                 </ul>
             </div>
             <p>This list can be sent via email by entering an email address below:<br />
-                <input id="email-address" type="email" /><a id="email-send" data-role="button" data-icon="star" data-iconpos="" data-mini="true">send info</a><br /><small>You must have a network connection for this feature to work</small></p>
+                <input id="email-address" type="email" /><a id="email-send" data-role="button" data-icon="star" data-iconpos="" data-mini="true">send info</a></p>
         </div>
     </div>
 </body>
