Update to email text - include selections

--- a/tree.html
+++ b/tree.html
@@ -128,7 +128,7 @@
                 <input type="radio" name="stage" id="stage-d" value="Other" /> <label for="stage-d">Other</label>
             </fieldset>
         </div>
-        <div data-role="collapsible" data-mini="true" data-iconpos="right" class="collapsible-no-icon">
+        <div id="summary-text" data-role="collapsible" data-mini="true" data-iconpos="right" class="collapsible-no-icon">
             <h1>Summary</h1>
             <p>The following are the items you selected.  Verify these selections before viewing the list of possible incentives.</p>
             <fieldset id="results-controlgroup" data-role="controlgroup">
